--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/abhnv42/openenvoy-task/issues"
   },
-  "homepage": "https://github.com/abhnv42/openenvoy-task#readme"
+  "homepage": "https://github.com/abhnv42/openenvoy-task#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0"
+  }
 }
