--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node --test"
+    "test:unit": "node --test 'test/unit/**/*.test.js'"
   },
   "repository": {
     "type": "git",
