--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "test"
   },
   "scripts": {
-    "test:unit": "node --test 'test/unit/**/*.test.js'"
+    "test:unit": "node --test 'test/unit/**/*.test.js'",
+    "test:integration": "node --test 'test/integration*/*.test.js'",
+    "test": "node --test 'test/**/*.test.js'"
   },
   "repository": {
     "type": "git",
